UI of GYM Version 1.1.0

--- a/src/app/nav/nav-bar/nav-bar.component.css
+++ b/src/app/nav/nav-bar/nav-bar.component.css
@@ -444,3 +444,8 @@ a {
   margin: 18px 18px 0 0;
   color: #065e77;
 }
+#header {
+  position: fixed;
+  background-color: aliceblue;
+  box-shadow: 2px 2px 15px #dadada;
+}
