--- a/src/app/pages/home-page/home-page.component.css
+++ b/src/app/pages/home-page/home-page.component.css
@@ -44,6 +44,7 @@
   }
   a.right {
     margin-left: 15px;
+    cursor: pointer;
   }
 
   .form__group {
@@ -55,7 +56,7 @@
   
   .form__field {
     font-family: inherit;
-    width: 100%;
+    width: 300px;
     border: 0;
     border-bottom: 2px solid #9b9b9b;
     outline: 0;
@@ -83,6 +84,7 @@
     transition: 0.2s;
     font-size: 1rem;
     color: #9b9b9b;
+    width: max-content;
   }
   
   .form__field:focus {
@@ -116,3 +118,51 @@
   a.mPlayer {
     cursor: pointer;
   }
+
+
+.content-1 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.modal-header {
+  background-color: #4a8dd2;
+}
+.modal-header .modal-title ,.modal-header .close {
+  color: white;
+}
+/* .modal-header .modal-title {
+  margin: 15px;
+}
+.form-popup {
+  margin: 20px;
+} */
+.modal-body {
+  background-color: #f3f3f3;
+}
+.modal-body .content-1 {
+  display: flex;
+  justify-content: space-around;
+}
+.btn-resub {
+  background-color: aliceblue;
+  font-weight: bold;
+}
+.btn-resub:hover {
+  background-color: rgb(207, 231, 252);
+  box-shadow: 2px 2px 15px rgb(185, 185, 185);
+}
+.btn-exit {
+  background-color: rgb(250, 165, 153);
+  font-weight: bold;
+}
+.btn-exit:hover {
+  background-color: rgb(248, 112, 88);
+  box-shadow: 2px 2px 15px rgb(185, 185, 185);
+  color: white;
+}
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
