--- a/src/app/pages/update-player/update-player.component.html
+++ b/src/app/pages/update-player/update-player.component.html
@@ -52,14 +52,14 @@
 
                     </div>
                     <div class="content-1">
-                        <div class="input-group" style="width: 200px;">
-                            <input class="input--style-2" type="number" placeholder="Passport Number" 
-                            name="passportNumber" formControlName='passportNumber'>
-                        </div>
-    
                         <div class="input-group address" style="width: 200px;">
                             <input class="input--style-2" type="text" placeholder="Amount Paid" 
                             name="amountPaid" formControlName='amountPaid' required>
+                        </div>
+    
+                        <div class="input-group address" style="width: 200px;">
+                            <input class="input--style-2" type="text" placeholder="Amount Rest" 
+                            name="amountRest" formControlName='amountRest'>
                         </div>
                     </div>
                   
@@ -99,10 +99,16 @@
                         </div>
                     </div>
 
-                    <div class="">
+                    <div class="content-1 text-top">
+                        <div class="">
+                            <div class="input-group" style="width: 200px;">
+                                <input class="input--style-2" type="number" placeholder="Age" 
+                                name="age" formControlName='age' required>
+                            </div>
+                        </div>
                         <div class="input-group" style="width: 200px;">
-                            <input class="input--style-2" type="number" placeholder="Age" 
-                            name="age" formControlName='age' required>
+                            <input class="input--style-2" type="number" placeholder="Passport Number" 
+                            name="passportNumber" formControlName='passportNumber'>
                         </div>
                     </div>
 
